# cfd-cuda

./: CMakeLists.txt  README.md  boundary.cpp  boundary.h  cfdio.cpp  cfdio.h  jacobi.cu  jacobi.h  main.cu
